--- a/layers/misc/README.org
+++ b/layers/misc/README.org
@@ -10,23 +10,34 @@ This layer brings together various small functions or customizations that I find
 useful. I'll probably add random functions to this over time, rather than
 cluttering up my =init.el= file.
 
-I doubt it will be of any use to anyone else!
-
 * Install
-  To use this configuration layer, add it to your =~/.spacemacs= or =~/.spacemacs.d/init.el. You will need to
-  add =ed-misc= to the existing =dotspacemacs-configuration-layers= list in this
+  To use this configuration layer, add it to your =~/.spacemacs= or =~/.spacemacs.d/init.el=. You will need to
+  add =misc= to the existing =dotspacemacs-configuration-layers= list in this
   file.
 
 * Key bindings
 
-| Key Binding | Description                                      |
-|-------------+--------------------------------------------------|
-| ~M [~       | Scroll doc-view in other window to previous page |
-| ~M ]~       | Scroll doc-view in other window to next page     |
-| ~<SPC> o m~ | Opens Marked.app to preview the current buffer   |
-
-# Use GitHub URLs if you wish to link a Spacemacs documentation file or its heading.
-# Examples:
-# [[https://github.com/syl20bnr/spacemacs/blob/master/doc/VIMUSERS.org#sessions]]
-# [[https://github.com/syl20bnr/spacemacs/blob/master/layers/%2Bfun/emoji/README.org][Link to Emoji layer README.org]]
-# If space-doc-mode is enabled, Spacemacs will open a local copy of the linked file.
+| Key Binding  | Description                                 |
+|--------------+---------------------------------------------|
+| <SPC> fx     | Switch to scratch buffer in emacs-lisp mode |
+| <SPC> oa     | org-agends                                  |
+| <SPC> od     | org-agenda-day                              |
+| <SPC> oc     | org-capture                                 |
+|              |                                             |
+| paredit      | bindings                                    |
+| C-<left>     | paredit-backward-slurp-sexp                 |
+| C-<right>    | paredit-backward-barf-sexp                  |
+| C-M-<left>   | paredit-forward-barf-sexp                   |
+| C-M-<right>  | paredit-forward-slurp-sexp                  |
+| M-<up>       | paredit-splice-sexp-killing-backward        |
+| M-<down>     | paredit-splice-sexp-killing-forward         |
+|              |                                             |
+| smartparens  | bindings                                    |
+| C-<left>"    | sp-backward-slurp-sexp                      |
+| C-<right>"   | sp-backward-barf-sexp                       |
+| C-M-<left>"  | sp-forward-barf-sexp                        |
+| C-,"         | sp-forward-barf-sexp                        |
+| C-M-<right>" | sp-forward-slurp-sexp                       |
+| C-.          | sp-forward-slurp-sexp                       |
+| M-<up>"      | sp-splice-sexp-killing-backward             |
+| M-<down>"    | sp-splice-sexp-killing-forward              |
